[gd_scene load_steps=8 format=3 uid="uid://cw8bgrcqh6wkg"]

[ext_resource type="Script" uid="uid://xfiu7xx8vjvt" path="res://Main/Notebook/notebook_manager.gd" id="1_43afr"]
[ext_resource type="PackedScene" uid="uid://c066labx2jds" path="res://Main/Mascaras/mask_generator.tscn" id="2_l2v51"]
[ext_resource type="Texture2D" uid="uid://b5bs002qtgt76" path="res://Assets/godotarte/godot_1.png" id="3_74ocg"]
[ext_resource type="Texture2D" uid="uid://b3q7s3vcppp4d" path="res://Assets/godotarte/godot_2.png" id="4_b1p5f"]
[ext_resource type="Texture2D" uid="uid://6gf7e710ryku" path="res://Assets/godotarte/godot_3.png" id="5_sio78"]
[ext_resource type="Texture2D" uid="uid://cgs66uisic533" path="res://Assets/godotarte/godot_4.png" id="6_qat5j"]
[ext_resource type="PackedScene" uid="uid://blefob0wkn1ol" path="res://Main/Notebook/cross_out_button.tscn" id="7_a56kg"]

[node name="NotebookManager" type="Node2D"]
script = ExtResource("1_43afr")

[node name="MaskGenerator" parent="." instance=ExtResource("2_l2v51")]
unique_name_in_owner = true

[node name="Button" type="Button" parent="."]
offset_left = 1715.0
offset_top = 720.0
offset_right = 1810.0
offset_bottom = 751.0
text = "Abrir notas"

[node name="Notebook" type="CanvasLayer" parent="."]
unique_name_in_owner = true

[node name="ColorRect" type="ColorRect" parent="Notebook"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.14509805)

[node name="TextureRect" type="TextureRect" parent="Notebook"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -609.25
offset_top = -281.75
offset_right = 609.25
offset_bottom = 281.75
grow_horizontal = 2
grow_vertical = 2

[node name="MaskMarginContainer" type="MarginContainer" parent="Notebook/TextureRect"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
theme_override_constants/margin_left = 30
theme_override_constants/margin_top = 30
theme_override_constants/margin_right = 30
theme_override_constants/margin_bottom = 30

[node name="GridContainer" type="GridContainer" parent="Notebook/TextureRect/MaskMarginContainer"]
layout_mode = 2
theme_override_constants/h_separation = 40
theme_override_constants/v_separation = 50
columns = 7

[node name="TextureRect" type="TextureRect" parent="Notebook/TextureRect/MaskMarginContainer/GridContainer"]
layout_mode = 2
texture = ExtResource("3_74ocg")

[node name="TextureRect13" type="TextureRect" parent="Notebook/TextureRect/MaskMarginContainer/GridContainer"]
layout_mode = 2
texture = ExtResource("4_b1p5f")

[node name="TextureRect3" type="TextureRect" parent="Notebook/TextureRect/MaskMarginContainer/GridContainer"]
layout_mode = 2
texture = ExtResource("5_sio78")

[node name="TextureRect10" type="TextureRect" parent="Notebook/TextureRect/MaskMarginContainer/GridContainer"]
layout_mode = 2
texture = ExtResource("3_74ocg")

[node name="TextureRect5" type="TextureRect" parent="Notebook/TextureRect/MaskMarginContainer/GridContainer"]
layout_mode = 2
texture = ExtResource("3_74ocg")

[node name="TextureRect12" type="TextureRect" parent="Notebook/TextureRect/MaskMarginContainer/GridContainer"]
layout_mode = 2
texture = ExtResource("5_sio78")

[node name="TextureRect19" type="TextureRect" parent="Notebook/TextureRect/MaskMarginContainer/GridContainer"]
layout_mode = 2
texture = ExtResource("5_sio78")

[node name="TextureRect2" type="TextureRect" parent="Notebook/TextureRect/MaskMarginContainer/GridContainer"]
layout_mode = 2
texture = ExtResource("4_b1p5f")

[node name="TextureRect17" type="TextureRect" parent="Notebook/TextureRect/MaskMarginContainer/GridContainer"]
layout_mode = 2
texture = ExtResource("4_b1p5f")

[node name="TextureRect20" type="TextureRect" parent="Notebook/TextureRect/MaskMarginContainer/GridContainer"]
layout_mode = 2
texture = ExtResource("4_b1p5f")

[node name="TextureRect6" type="TextureRect" parent="Notebook/TextureRect/MaskMarginContainer/GridContainer"]
layout_mode = 2
texture = ExtResource("4_b1p5f")

[node name="TextureRect21" type="TextureRect" parent="Notebook/TextureRect/MaskMarginContainer/GridContainer"]
layout_mode = 2
texture = ExtResource("4_b1p5f")

[node name="TextureRect18" type="TextureRect" parent="Notebook/TextureRect/MaskMarginContainer/GridContainer"]
layout_mode = 2
texture = ExtResource("4_b1p5f")

[node name="TextureRect11" type="TextureRect" parent="Notebook/TextureRect/MaskMarginContainer/GridContainer"]
layout_mode = 2
texture = ExtResource("4_b1p5f")

[node name="TextureRect9" type="TextureRect" parent="Notebook/TextureRect/MaskMarginContainer/GridContainer"]
layout_mode = 2
texture = ExtResource("3_74ocg")

[node name="TextureRect16" type="TextureRect" parent="Notebook/TextureRect/MaskMarginContainer/GridContainer"]
layout_mode = 2
texture = ExtResource("3_74ocg")

[node name="TextureRect14" type="TextureRect" parent="Notebook/TextureRect/MaskMarginContainer/GridContainer"]
layout_mode = 2
texture = ExtResource("4_b1p5f")

[node name="TextureRect7" type="TextureRect" parent="Notebook/TextureRect/MaskMarginContainer/GridContainer"]
layout_mode = 2
texture = ExtResource("5_sio78")

[node name="TextureRect4" type="TextureRect" parent="Notebook/TextureRect/MaskMarginContainer/GridContainer"]
layout_mode = 2
texture = ExtResource("6_qat5j")

[node name="TextureRect15" type="TextureRect" parent="Notebook/TextureRect/MaskMarginContainer/GridContainer"]
layout_mode = 2
texture = ExtResource("6_qat5j")

[node name="TextureRect8" type="TextureRect" parent="Notebook/TextureRect/MaskMarginContainer/GridContainer"]
layout_mode = 2
texture = ExtResource("6_qat5j")

[node name="CrossMarginContainer2" type="MarginContainer" parent="Notebook/TextureRect"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
theme_override_constants/margin_left = 30
theme_override_constants/margin_top = 30
theme_override_constants/margin_right = 30
theme_override_constants/margin_bottom = 30

[node name="GridContainer" type="GridContainer" parent="Notebook/TextureRect/CrossMarginContainer2"]
layout_mode = 2
theme_override_constants/h_separation = 40
theme_override_constants/v_separation = 50
columns = 7

[node name="CrossOutButton" parent="Notebook/TextureRect/CrossMarginContainer2/GridContainer" instance=ExtResource("7_a56kg")]
layout_mode = 2

[node name="CrossOutButton2" parent="Notebook/TextureRect/CrossMarginContainer2/GridContainer" instance=ExtResource("7_a56kg")]
layout_mode = 2

[node name="CrossOutButton3" parent="Notebook/TextureRect/CrossMarginContainer2/GridContainer" instance=ExtResource("7_a56kg")]
layout_mode = 2

[node name="CrossOutButton4" parent="Notebook/TextureRect/CrossMarginContainer2/GridContainer" instance=ExtResource("7_a56kg")]
layout_mode = 2

[node name="CrossOutButton5" parent="Notebook/TextureRect/CrossMarginContainer2/GridContainer" instance=ExtResource("7_a56kg")]
layout_mode = 2

[node name="CrossOutButton6" parent="Notebook/TextureRect/CrossMarginContainer2/GridContainer" instance=ExtResource("7_a56kg")]
layout_mode = 2

[node name="CrossOutButton7" parent="Notebook/TextureRect/CrossMarginContainer2/GridContainer" instance=ExtResource("7_a56kg")]
layout_mode = 2

[node name="CrossOutButton8" parent="Notebook/TextureRect/CrossMarginContainer2/GridContainer" instance=ExtResource("7_a56kg")]
layout_mode = 2

[node name="CrossOutButton9" parent="Notebook/TextureRect/CrossMarginContainer2/GridContainer" instance=ExtResource("7_a56kg")]
layout_mode = 2

[node name="CrossOutButton10" parent="Notebook/TextureRect/CrossMarginContainer2/GridContainer" instance=ExtResource("7_a56kg")]
layout_mode = 2

[node name="CrossOutButton11" parent="Notebook/TextureRect/CrossMarginContainer2/GridContainer" instance=ExtResource("7_a56kg")]
layout_mode = 2

[node name="CrossOutButton12" parent="Notebook/TextureRect/CrossMarginContainer2/GridContainer" instance=ExtResource("7_a56kg")]
layout_mode = 2

[node name="CrossOutButton13" parent="Notebook/TextureRect/CrossMarginContainer2/GridContainer" instance=ExtResource("7_a56kg")]
layout_mode = 2

[node name="CrossOutButton14" parent="Notebook/TextureRect/CrossMarginContainer2/GridContainer" instance=ExtResource("7_a56kg")]
layout_mode = 2

[node name="CrossOutButton15" parent="Notebook/TextureRect/CrossMarginContainer2/GridContainer" instance=ExtResource("7_a56kg")]
layout_mode = 2

[node name="CrossOutButton16" parent="Notebook/TextureRect/CrossMarginContainer2/GridContainer" instance=ExtResource("7_a56kg")]
layout_mode = 2

[node name="CrossOutButton17" parent="Notebook/TextureRect/CrossMarginContainer2/GridContainer" instance=ExtResource("7_a56kg")]
layout_mode = 2

[node name="CrossOutButton18" parent="Notebook/TextureRect/CrossMarginContainer2/GridContainer" instance=ExtResource("7_a56kg")]
layout_mode = 2

[node name="CrossOutButton19" parent="Notebook/TextureRect/CrossMarginContainer2/GridContainer" instance=ExtResource("7_a56kg")]
layout_mode = 2

[node name="CrossOutButton20" parent="Notebook/TextureRect/CrossMarginContainer2/GridContainer" instance=ExtResource("7_a56kg")]
layout_mode = 2

[node name="CrossOutButton21" parent="Notebook/TextureRect/CrossMarginContainer2/GridContainer" instance=ExtResource("7_a56kg")]
layout_mode = 2

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
[connection signal="gui_input" from="Notebook/ColorRect" to="." method="_on_color_rect_gui_input"]
